--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,7 @@
                     <executions>
                         <execution>
                             <id>attach-sources</id>
+                            <phase>deploy</phase>
                             <goals>
                                 <goal>jar-no-fork</goal>
                             </goals>
@@ -139,6 +140,7 @@
                     <executions>
                         <execution>
                             <id>attach-javadocs</id>
+                            <phase>deploy</phase>
                             <goals>
                                 <goal>jar</goal>
                             </goals>
