--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <ksuid.version>4.1.0</ksuid.version>
+        <tsid.version>5.2.3</tsid.version>
         <resilience4j.version>2.0.0</resilience4j.version>
         <micrometer.version>1.10.4</micrometer.version>
         <slf4j.version>1.7.36</slf4j.version>
@@ -56,6 +57,12 @@
             <groupId>com.github.f4b6a3</groupId>
             <artifactId>ksuid-creator</artifactId>
             <version>${ksuid.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.f4b6a3</groupId>
+            <artifactId>tsid-creator</artifactId>
+            <version>${tsid.version}</version>
         </dependency>
 
         <dependency>
