--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <ksuid.version>4.1.0</ksuid.version>
         <tsid.version>5.2.5</tsid.version>
+        <ulid.version>5.2.2</ulid.version>
         <resilience4j.version>2.1.0</resilience4j.version>
         <micrometer.version>1.12.0</micrometer.version>
         <slf4j.version>1.7.36</slf4j.version>
@@ -70,6 +71,12 @@
             <groupId>com.github.f4b6a3</groupId>
             <artifactId>tsid-creator</artifactId>
             <version>${tsid.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.f4b6a3</groupId>
+            <artifactId>ulid-creator</artifactId>
+            <version>${ulid.version}</version>
         </dependency>
 
         <dependency>
