--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
         </developer>
     </developers>
 
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>https://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
     <issueManagement>
         <system>GitLab</system>
         <url>https://gitlab.illuin.tech/illuin-team/data-pipeline/-/issues</url>
@@ -195,14 +202,9 @@
 
     <distributionManagement>
         <repository>
-            <id>nexus</id>
-            <name>Releases</name>
-            <url>https://nexus.illuin-tech.com/repository/maven-releases/</url>
+            <id>ossrh</id>
+            <name>Central Repository OSSRH</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
-        <snapshotRepository>
-            <id>nexus</id>
-            <name>Snapshot</name>
-            <url>https://nexus.illuin-tech.com/repository/maven-snapshots/</url>
-        </snapshotRepository>
     </distributionManagement>
 </project>
