chore: fix for codecov action

--- a/.github/workflows/maven-code-coverage.yml
+++ b/.github/workflows/maven-code-coverage.yml
@@ -28,4 +28,6 @@ jobs:
       run: mvn clean -B test --file pom.xml
     - uses: codecov/codecov-action@v4
       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        slug: illuin-tech/data-pipeline
         verbose: true
