--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -12,21 +12,26 @@ on:
 jobs:
   analyze:
     name: Analyze
-    runs-on: ubuntu-latest
     permissions:
       actions: read
       contents: read
       security-events: write
 
     strategy:
-      fail-fast: false
       matrix:
-        language: [ 'java' ]
+        os: [ ubuntu-latest ]
+        java: [ 17 ]
+      fail-fast: false
 
+    runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-
+    - name: Set up JDK ${{ matrix.java }}
+      uses: actions/setup-java@v3
+      with:
+        java-version: ${{ matrix.java }}
+        distribution: 'temurin'
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
