ci: fix codecov upload

--- a/.github/workflows/maven-code-coverage.yml
+++ b/.github/workflows/maven-code-coverage.yml
@@ -29,5 +29,6 @@ jobs:
     - uses: codecov/codecov-action@v4
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        slug: illuin-tech/data-pipeline
+        #slug: illuin-tech/data-pipeline
+        fail_ci_if_error: true
         verbose: true
