--- a/.github/workflows/maven-code-coverage.yml
+++ b/.github/workflows/maven-code-coverage.yml
@@ -25,7 +25,7 @@ jobs:
         java-version: ${{ matrix.java }}
         distribution: 'temurin'
     - name: Test with Maven
-      run: mvn clean -B test --file pom.xml
+      run: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent jacoco:report
     - uses: codecov/codecov-action@v4
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
