--- a/.github/workflows/maven-code-coverage.yml
+++ b/.github/workflows/maven-code-coverage.yml
@@ -25,9 +25,9 @@ jobs:
         java-version: ${{ matrix.java }}
         distribution: 'temurin'
     - name: Test with Maven
-      run: mvn clean -B test --file pom.xml
+      run: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent test jacoco:report
     - uses: codecov/codecov-action@v4
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        slug: illuin-tech/data-pipeline
+        fail_ci_if_error: true
         verbose: true
