--- a/.github/workflows/maven-checkstyle.yml
+++ b/.github/workflows/maven-checkstyle.yml
@@ -24,8 +24,13 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
           distribution: 'temurin'
-      - name: Run check style
-        uses: nikitasavinov/checkstyle-action@0.6.0
+      - uses: reviewdog/action-setup@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          tool_name: 'reviewdog'
+          reviewdog_version: v0.17.2
+      - name: Checkstyle with Maven
+        run: mvn clean checkstyle:check --fail-never
+      - name: Run reviewdog
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          cat target/checkstyle-result.xml | reviewdog -f=checkstyle -reporter=github-pr-review -runners=golint,govet
