--- a/core/pom.xml
+++ b/core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>tech.illuin</groupId>
         <artifactId>data-pipeline-parent</artifactId>
-        <version>0.17-SNAPSHOT</version>
+        <version>0.17</version>
     </parent>
 
     <artifactId>data-pipeline</artifactId>
