--- a/pom.xml
+++ b/pom.xml
@@ -63,8 +63,8 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>1.7.36</slf4j.version>
-        <loki4j.version>1.4.2</loki4j.version>
         <junit.version>5.11.4</junit.version>
+        <mockito.version>5.15.2</mockito.version>
         <jacoco.version>0.8.12</jacoco.version>
         <checkstyle.version>10.21.1</checkstyle.version>
         <checkstyle.config.location>checkstyle.xml</checkstyle.config.location>
